gccida/c3/simplify_relational_operation
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2540:37: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_relational_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                    ^
                                    enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2540:52: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_relational_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                                   ^
                                                   enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2544:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2546:4: error: expected ';' after expression
rtx pool_constant; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2546:5: error: use of undeclared identifier 'pool_constant'; did you mean 'get_pool_constant'?
rtx pool_constant; // r13 
    ^~~~~~~~~~~~~
    get_pool_constant
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/rtl.h:1305:12: note: 'get_pool_constant' declared here
extern rtx get_pool_constant            PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2548:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v10; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2549:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pool_mode; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2550:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2553:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v15; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2554:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2555:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2556:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v18; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2562:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v24; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2565:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2565:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2567:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v29; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2579:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v41; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2599:6: error: use of undeclared identifier 'v61'
rtx *v61; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/simplify-rtx.c:2606:6: error: use of undeclared identifier 'v68'
rtx *v68; // rcx 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_relational_operation/src/obj/simplify-rtx.o] Error 1
